<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/readAllTweetsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_all_tweets"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/tweetIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_tweet_id"
        android:layout_below="@id/readAllTweetsButton"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/readSpecificTweetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_specific_tweet"
        android:layout_below="@id/tweetIdEditText"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:layout_below="@id/readSpecificTweetButton"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/tweetDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_tweet_description"
        android:layout_below="@id/userNameEditText"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/createTweetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_tweet"
        android:layout_below="@id/tweetDescriptionEditText"
        android:layout_marginTop="8dp"/>

</RelativeLayout>